# clip-bridge

./: .gitignore  CLAUDE.md  README.md  config.yaml.template  pyproject.toml  start
clip_bridge/: __init__.py  config.py  cooldown.py  discovery.py  interactive.py  main.py  monitor.py  protocol.py  receiver.py  sender.py
docs/plans/: 2026-03-06-auto-discovery-design.md  2026-03-06-auto-discovery.md  2026-03-06-clip-bridge-design.md  2026-03-06-clip-bridge-implementation.md
tests/: __init__.py  test_config.py  test_cooldown.py  test_discovery.py  test_integration.py  test_interactive.py  test_main_discovery.py  test_monitor.py  test_protocol.py  test_receiver.py  test_sender.py
tests/integration/: __init__.py  test_auto_discovery_integration.py
