[project]
name = "clip-bridge"
version = "0.1.0"
description = "Cross-platform clipboard sharing tool"
requires-python = ">=3.10"
dependencies = [
    "pyperclip>=1.8.2",
    "pyyaml>=6.0.1",
]

[project.scripts]
clip-bridge = "clip_bridge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
